Repasando los Fundamentos de Angular

--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -44,3 +44,9 @@
   Enim, cum rem commodi dolor ab doloremque placeat distinctio quidem tenetur molestiae, fugit suscipit repellat perspiciatis culpa totam. Quidem necessitatibus labore reiciendis ducimus magnam temporibus consectetur aut deleniti at assumenda!
   Quibusdam assumenda libero ratione enim expedita quis? Delectus et, quam maiores non vitae iure odio soluta magni minima ducimus. Quia magni aut cum commodi. Autem iste possimus aperiam quasi ad.</p>
 </div>
+
+<h1>NgModel</h1>
+<p>Nombre {{persona.name}}</p>
+<!-- Con esta funcion vamos a trabajar sobre el ngModel el cual permite el intercambio de datos en el cual nosotros le adjuntamos el objeto al cual se le va a cambiar el nombre -->
+<input type="text" [(ngModel)]="persona.name"/>
+
