Añadiendo Estilos a la Galeria de Productos

--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -102,9 +102,9 @@ que este arreglo se este recorriendo para luego poder renderizarlo a traves de S
 <hr>
 
 <h1>*ngFor para Arreglos</h1>
-<div>
+<div class="products--grid">
   <div *ngFor=" let product of products">
-    <img [src]="product.image" alt="image" width="250px">
+    <img [src]="product.image" alt="image">
     <h2>{{product.price}}</h2>
     <p>{{product.name}}</p>
   </div>
