--- a/my-app/src/app/app.component.css
+++ b/my-app/src/app/app.component.css
@@ -1,4 +1,4 @@
-.box{
+.box {
   position: relative;
   height: 200px;
   width: 200px;
@@ -7,7 +7,41 @@
   margin: 10px 10px 10px 10px;
 }
 
-.img2{
+.img2 {
   width: 250px;
   height: 250px;
+}
+
+.products--grid {
+  display: flex;
+  flex-direction: column;
+}
+
+.products--grid div img {
+  width: 100%;
+  border-radius: 10px;
+}
+
+.products--grid h2 {
+  margin: 0;
+}
+
+.products--grid p {
+  margin: 0;
+}
+
+@media screen and (min-width: 40em) {
+  .products--grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 15px;
+  }
+}
+
+@media screen and (min-width: 62em) {
+  .products--grid {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 15px;
+  }
 }
