--- a/my-app/src/app/app.component.css
+++ b/my-app/src/app/app.component.css
@@ -59,6 +59,16 @@ opacity: 1;
   border-color: red;
 }
 
+.campo-error{
+  background: red;
+  color: white;
+  opacity: 0;
+  transition: all linear .5s;
+}
+
+.campo-error.invalid{
+  opacity: 1;
+}
 @media screen and (min-width: 40em) {
   .products--grid {
     display: grid;
